--- a/FinalProject/jokeactivity/build.gradle
+++ b/FinalProject/jokeactivity/build.gradle
@@ -1,11 +1,17 @@
-apply plugin: 'com.android.application'
+
+
+
+
+
+
+
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.udacity.gradle.builditbigger"
         minSdkVersion 10
         targetSdkVersion 22
         versionCode 1
@@ -22,8 +28,4 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
-    compile project(':javaJokes')
-    compile project(":jokeactivity")
-    // Added for AdMob
-    compile 'com.google.android.gms:play-services:7.3.0'
 }
