--- a/FinalProject/.gitignore
+++ b/FinalProject/.gitignore
@@ -3,5 +3,9 @@
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
-/build
+build/
 /captures
+jokeactivity/build/
+javaJokes/build/
+backend/build/
+*.iml/
