--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -19,6 +19,16 @@ android {
         }
     }
 
+    productFlavors{
+        free{
+            applicationId "com.udacity.gradle.builditbigger.free"
+        }
+
+        paid{
+            applicationId "com.udacity.gradle.builditbigger.paid"
+        }
+    }
+
     lintOptions {
         abortOnError false
     }
@@ -30,5 +40,5 @@ dependencies {
     compile project(path: ':backend', configuration: 'android-endpoints')
     // Added for AdMob
     compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    freeCompile 'com.google.android.gms:play-services:8.4.0'
 }
